syntax = "proto3";

option go_package = "./post_and_stat";

import "google/protobuf/empty.proto";

service PostManager {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {}
  rpc UpdatePost(UpdatePostRequest) returns (google.protobuf.Empty) {}
  rpc DeletePost(DeletePostRequest) returns (google.protobuf.Empty) {}
  rpc GetPostById(GetPostByIdRequest) returns (GetPostByIdResponse) {}
  rpc GetPostsOnPage(GetPostsOnPageRequest) returns (GetPostsOnPageResponse) {}
}

service StatManager {
  rpc GetPostStats(GetPostStatsRequest) returns (GetPostStatsResponse) {}
  rpc GetTopPosts(GetTopPostsRequest) returns (GetTopPostsResponse) {}
  rpc GetTopAuthors(google.protobuf.Empty) returns (GetTopAuthorsResponse) {}
  rpc DeletePost(DeletePostRequest) returns (google.protobuf.Empty) {}
}

message Post {
  int32 PostId = 1;
  string Title = 2;
  int32 AuthorId = 3;
  string Content = 4;
}

message CreatePostRequest {
  string Title = 1;
  int32 AuthorId = 2;
  string Content = 3;
}

message CreatePostResponse {
  int32 PostId = 1;
}

message UpdatePostRequest {
  int32 PostId = 1;
  string Title = 2;
  int32 AuthorId = 3;
  string Content = 4;
}

message DeletePostRequest {
  int32 PostId = 1;
  int32 AuthorId = 2;
}

message GetPostByIdRequest { int32 PostId = 1; }

message GetPostByIdResponse { Post Post = 1; }

message GetPostsOnPageRequest { int32 PageId = 1; }

message GetPostsOnPageResponse { repeated Post Posts = 1; }

message GetPostStatsRequest { int32 PostId = 1; }

message GetPostStatsResponse {
  int32 PostId = 1;
  uint32 Likes = 2;
  uint32 Views = 3;
}

enum OrderPostsBy {
  LIKES = 0;
  VIEWS = 1;
}

message PostStats {
  int32 PostId = 1;
  int32 AuthorId = 2;
  uint32 Stat = 3;
}

message FinalPostStats {
  int32 PostId = 1;
  string Author = 2;
  uint32 Stat = 3;
}

message GetTopPostsRequest { OrderPostsBy OrderBy = 1; }

message GetTopPostsResponse {
  repeated PostStats PostStats = 1;
}

message TopPosts {
  repeated FinalPostStats PostStats = 1;
}

message AuthorStats {
  int32 AuthorId = 1;
  uint32 Likes = 2;
}

message FinalAuthorStats {
  string Author = 1;
  uint32 Likes = 2;
}

message GetTopAuthorsResponse {
  repeated AuthorStats AuthorStats = 1;
}

message TopAuthors {
  repeated FinalAuthorStats AuthorStats = 1;
}